fix dark mode shop , log out button

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -372,10 +372,8 @@ table {
 
   /* NAV */
   .nav {
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
+   
+
       z-index: 100;
       padding: 1rem 2rem;
       display: flex;
